Fetch using FormData with file doesn't go through Service Worker https://bugs.webkit.org/show_bug.cgi?id=187461 <rdar://problem/41975544>

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/fetch/api/response/response-consume-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-stream.any-expected.txt:
* web-platform-tests/fetch/api/response/response-consume-stream.any.worker-expected.txt:

Source/WebCore:

Add support for reading formData based bodies through streams or regular methods like text.
For that purpose, we add FormDataConsumer which allows serializing form datas that may contain files or blobs.
Add the ability to load blobs from BlobLoader using the internal URL (stored in FormData) in lieu of passing a blob object.
Enable fetch events for form data based fetch events.

Test: http/wpt/service-workers/form-data-upload.html

* Modules/fetch/FetchBody.cpp:
* Modules/fetch/FetchBody.h:
* Modules/fetch/FetchBodyConsumer.cpp:
* Modules/fetch/FetchBodyConsumer.h:
* Modules/fetch/FormDataConsumer.cpp: Added.
* Modules/fetch/FormDataConsumer.h: Added.
* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* fileapi/BlobLoader.h:
* fileapi/FileReaderLoader.cpp:
* fileapi/FileReaderLoader.h:
* workers/service/context/ServiceWorkerFetch.cpp:

LayoutTests:

In addition to adding a test to http/wpt/fetch/request-consume-stream.html, we fix the other tests that should all be passing.
Add http/wpt/service-workers/form-data-upload.html and translate exiting http/tests scripts for the WPT server.

* http/wpt/fetch/request-consume-stream-expected.txt:
* http/wpt/fetch/request-consume-stream.html:
* http/wpt/service-workers/form-data-upload-expected.txt: Added.
* http/wpt/service-workers/form-data-upload-worker.js: Added.
* http/wpt/service-workers/form-data-upload.html: Added.
* http/wpt/service-workers/resources/create-temp-file-iframe.html: Added.
* http/wpt/service-workers/resources/reset-temp-file.py: Added.
* http/wpt/service-workers/resources/temp-file-utils.js: Added.
* http/wpt/service-workers/resources/touch-temp-file.py: Added.
* http/wpt/service-workers/resources/write-temp-file.py: Added.



Canonical link: https://commits.webkit.org/245739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287612 268f45cc-cd09-0410-ab3c-d52691b4dbfc