Source/WebCore/Modules/fetch/FetchBodyConsumer.h
@@ -29,8 +29,10 @@
 #pragma once
 
 #include "FetchBodySource.h"
+#include "FormDataConsumer.h"
 #include "JSDOMPromiseDeferred.h"
 #include "ReadableStreamSink.h"
+#include "ScriptExecutionContextIdentifier.h"
 #include "SharedBuffer.h"
 #include "UserGestureIndicator.h"
 
@@ -39,6 +41,7 @@ namespace WebCore {
 class Blob;
 class DOMFormData;
 class FetchBodySource;
+class FormData;
 class ReadableStream;
 
 class FetchBodyConsumer {
@@ -46,6 +49,8 @@ public:
     enum class Type { None, ArrayBuffer, Blob, JSON, Text, FormData };
 
     explicit FetchBodyConsumer(Type type) : m_type(type) { }
+
+    FetchBodyConsumer clone();
 
     void append(const uint8_t* data, unsigned);
 
@@ -65,6 +70,8 @@ public:
     void extract(ReadableStream&, ReadableStreamToSharedBufferSink::Callback&&);
     void resolve(Ref<DeferredPromise>&&, const String& contentType, ReadableStream*);
     void resolveWithData(Ref<DeferredPromise>&&, const String& contentType, const unsigned char*, unsigned);
+    void resolveWithFormData(Ref<DeferredPromise>&&, const String& contentType, const FormData&, ScriptExecutionContext*);
+    void consumeFormDataAsStream(const FormData&, FetchBodySource&, ScriptExecutionContext*);
 
     void loadingFailed(const Exception&);
     void loadingSucceeded(const String& contentType);
@@ -88,6 +95,7 @@ private:
     RefPtr<FetchBodySource> m_source;
     bool m_isLoading { false };
     RefPtr<UserGestureToken> m_userGestureToken;
+    std::unique_ptr<FormDataConsumer> m_formDataConsumer;
 };
 
 } // namespace WebCore
